Grid section refactor

--- a/style.css
+++ b/style.css
@@ -21,8 +21,9 @@ body {
 }
 .wrapper {
   margin-inline: auto;
+  margin-block: 4rem;
   max-width: 21.4375rem;
-  border: solid brown;
+  /* border: solid brown; */
   min-height: 100vh;
 }
 .nav-bar {
@@ -80,22 +81,22 @@ header p {
   /* justify-content: center; */
 }
 .grid-box {
-  outline: solid tomato;
+  /* outline: solid tomato; */
 }
 .outer-boxes {
   /* max-width: 22.125rem; */
   height: 22.75rem;
   /* flex-shrink: 0; */
   border-radius: 0.5rem;
-  outline: solid pink;
   /* background: var(--1---Galactic-Blue, #755cde); */
 }
 
 .outer-box-1 {
-  background: var(--1---Galactic-Blue, #755cde);
+  outline: solid pink;
+  /* background: var(--1---Galactic-Blue, #755cde); */
 }
 .outer-box-2 {
-  background: #f21cde;
+  /* background: #f21cde; */
   display: grid;
   grid-template-rows: 1fr 1fr;
   gap: 1.5rem;
@@ -107,17 +108,22 @@ header p {
 }
 
 .outer-box-3 {
-  background: #a21c1e;
+  /* background: #a21c1e; */
   display: grid;
   gap: 1.5rem;
   grid-template-rows: 1fr 1fr;
 }
 
+.inner-boxes {
+  outline: solid pink;
+  border-radius: 0.5rem;
+}
+
 /* Tablet style */
-@media (min-width: 640px) {
+@media (min-width: 768px) {
   .wrapper {
     max-width: 43.1rem;
-    border: solid purple;
+    /* border: solid purple; */
   }
   .nav-bar {
     height: 4rem;
@@ -147,14 +153,13 @@ header p {
   .grid-wrapper {
     display: grid;
     grid-template-columns: 1fr 1fr;
+    grid-template-rows: repeat(2, 1fr);
   }
   .outer-box-3 {
     /* grid-template-columns: 1fr; */
-    grid-template-rows: 1fr 1fr;
+    grid-template-columns: 1fr 1fr;
+    grid-column: 1 / 3;
   }
-}
-
-@media (min-width: 768px) {
 }
 
 @media (min-width: 1024px) {
@@ -163,10 +168,18 @@ header p {
 @media (min-width: 1280px) {
   .wrapper {
     max-width: 69.4375rem;
-    border: solid black;
+    /* border: solid black; */
   }
   .grid-wrapper {
+    display: grid;
     grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: auto;
+  }
+  .outer-box-3 {
+    display: grid;
+    grid-template-rows: 1fr 1fr;
+    grid-template-columns: auto;
+    grid-column: auto;
   }
 }
 
